NEW YEARS COMMIT, WOO HOO 2017!

--- a/package.json
+++ b/package.json
@@ -1,9 +1,27 @@
 {
   "name": "sarcasm",
   "version": "0.0.1",
-  "description": "Well, you know",
-  "main": "index.js",
+  "description": "Best library to show your appriciation",
+  "main": "lib/sarcasm.js",
   "repository": "git@github.com:komlev/sarcasm.git",
   "author": "Valeriy Komlev <komlev88@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack",
+    "test": ""
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "2.1.0-beta.27"
+  },
+  "keywords": [
+    "sarcasm",
+    "es6",
+    "js",
+    "framework",
+    "library"
+  ]
 }
