--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "test": ""
+    "test": "jest"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "jest": "^18.1.0",
     "webpack": "2.1.0-beta.27"
   },
   "keywords": [
