adding coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ language: node_js
 node_js:
   - node
   - 6
+
+after_script:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
