--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "coveralls": "^2.11.15",
     "jest": "^18.1.0",
     "webpack": "2.1.0-beta.27"
   },
