I WOULD DO EVERYTHING TO HAVE 100% COVERAGE

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/lib/"
-    ]
+    ],
+    "coverageReporters": ["json", "lcov", "text", "cobertura"]
   }
 }
