--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ node_js:
   - node
   - 6
 
-script:
+after_success:
   - mkdir -p shippable
   - mkdir -p shippable/codecoverage
   - mv ./coverage/cobertura-coverage.xml shippable/codecoverage/coverage.xml
