--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ addons:
 
 after_script:
   - bash <(curl -s https://codecov.io/bash)
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < ./coverage/lcov.info
+  - npm install codeclimate-test-reporter codacy-coverage
+  - ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage
   - rm -rf ./coverage
